@@ -7,29 +7,30 @@
 [![CodeFactor](https://www.codefactor.io/repository/github/thomzy/jmusicbot-jptoen/badge/main)](https://www.codefactor.io/repository/github/thomzy/jmusicbot-jptoen/overview/main)
 [![Build and Test](https://github.com/THOMZY/JMusicBot-JPtoEN/actions/workflows/release.yml/badge.svg)](https://github.com/THOMZY/JMusicBot-JPtoEN/actions/workflows/release.yml)
 </h3>
-<h2 align="center">▶️ Youtube playback fixed ( XX September 2025 )</h2>
-
 
 # JMusicBot
 <img align="right" src="https://i.imgur.com/KA0s1mn.png" height="290">
 
 JMusicBot uses a simple and user-friendly UI. Both setup and launch are easy.
 
-This is an English translation of JMusicBotJP.
+This is an English translation of [JMusicBotJP](https://github.com/Cosgy-Dev/JMusicBot-JP).
 
 This fork aims to updates dependencies when YouTube playback breaks and adds minor new features.
 
 ### Changes :
 
+* **[`yt-dlp`](https://github.com/yt-dlp/yt-dlp)** fallback and support.
 * Added a web panel for music / bot management.  
 * Added `/history` command that track played songs.  
 * Added `/radio` command that searches and plays radio stations.  
 * Added `/stats` command to view total play time and songs played.  
+* Added `/settopicstatus` command to toggle text channel playing status.  
 * `/nowplaying` now have more and cleaner informations.  
-* `/lyrics` his now more robust finding lyrics. 
+* `/lyrics` his now more robust finding lyrics.  
+* `/shuffle` now have 2 modes, "all" tracks in queue or "mytracks" only.  
 * `/play` now work with Spotify links instead of returning "Unknown file format." error.   
 * Fixed Youtube livestreams fail at 30sec. 
-* Added the ability to queue multiple local files in a single message.
+* Added the ability to queue multiple local files in a single message. ( 10 max, Discord upload limit )
 
 Check the [CHANGELOG](https://github.com/THOMZY/JMusicBot-JPtoEN/blob/main/CHANGELOG.md) to view all the updated dependencies.
   
@@ -43,7 +44,7 @@ Check the [CHANGELOG](https://github.com/THOMZY/JMusicBot-JPtoEN/blob/main/CHANG
 * Unique permission system with DJs
 * Simple and easy-to-use UI
 * Playback bar displayed in channel topics
-* Supports many sites including YouTube, Spotify, Soundcloud and NicoNico Douga
+* Supports many sites including YouTube, Spotify, Soundcloud and NicoNico Douga and now Instagram, Tiktok, X / Twitter
 * Supports numerous online radios/streams
 * Playback of local files
 * Playlist support
@@ -51,11 +52,20 @@ Check the [CHANGELOG](https://github.com/THOMZY/JMusicBot-JPtoEN/blob/main/CHANG
 
 # Setting up :
 
-This bot requires Java version 17 or higher.
-If Java is not installed, download it from [here](https://www.oracle.com/jp/java/technologies/downloads/#java17).  
+This bot requires Java version 25 or higher.
+If Java is not installed, download it from [here](https://www.oracle.com/jp/java/technologies/downloads/).  
 To start this bot yourself, refer to the [official Jagrosh website](https://jmusicbot.com/setup/).  
-You can check the [Cosgy Dev Official Page](https://www.cosgy.dev/2019/09/06/jmusicbot-setup/) too.  
+You can check the [Cosgy Dev Official Page](https://www.cosgy.dev/2019/09/06/jmusicbot-setup/) too.
 You can find the raw 'config.txt' file [here](https://raw.githubusercontent.com/THOMZY/JMusicBot-JPtoEN/refs/heads/main/src/main/resources/reference.conf) or in release tab.  
+
+# Youtube cipher server :
+It becomes harder and harder to keep up with YouTube's cipher changes, as they become more frequent and complex.  
+To help with this, you can use a remote cipher server to handle signature deciphering for you.
+
+Follow instructions to setup a simple Deno server for those pesky Youtube errors :  
+https://github.com/kikkia/yt-cipher ( Thx Kikkia )
+
+You can either use the [public instance](https://github.com/kikkia/yt-cipher?tab=readme-ov-file#public-instance) provided by Kikkia or [host the server yourself](https://github.com/kikkia/yt-cipher?tab=readme-ov-file#hosting-yourself).
 
 # Setup Using Docker :
 
@@ -75,7 +85,23 @@ mvn clean package
 You will find ```JMusicBot-XXXX.XX.XX-All.jar``` in the "target" folder. 
    
 Or just download the latest working provided .jar [here](https://github.com/THOMZY/JMusicBot-JPtoEN/releases/latest).  
-  
+
+
+Because this build uses DAVE, use the recommanded launch arguments below:
+
+```bash
+java --enable-native-access=ALL-UNNAMED -Djava.net.preferIPv6Addresses=true -Dnogui=true -jar JMusicBot.jar
+```
+
+| Argument | Description |
+|---|---|
+| `java` | Runs the Java runtime. |
+| `--enable-native-access=ALL-UNNAMED` | Enables native access required by DAVE. |
+| `-Djava.net.preferIPv6Addresses=true` | Prefers IPv6 addresses when available. |
+| `-Dnogui=true` | Starts the bot without GUI (server/headless mode). |
+| `-jar JMusicBot.jar` | Launches the JAR file. |
+
+
 # Note :
 
 This bot cannot be used as a public bot.
